--- a/components/layout/Home.module.css
+++ b/components/layout/Home.module.css
@@ -1,3 +1,7 @@
+.homemain {
+  max-width: 30rem;
+  margin: auto;
+}
 .home {
   display: flex;
   align-items: center;
@@ -11,4 +15,35 @@
 }
 .bio {
   padding: 2rem 0;
+}
+.work {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 45rem;
+  padding: 0 2rem;
+  margin: auto;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.work > p {
+  padding: 0 2rem;
+  flex-basis: 50%;
+  flex-grow: 1;
+}
+
+.work > img {
+  flex-grow: 1;
+  border-radius: 10%;
+  flex-basis: 0;
+  padding-bottom: 1rem;
+}
+
+.work > .workheader {
+  padding: 0 0 2rem 0;
+  font-size: 30px;
+  text-align: center;
+  flex-basis: 100%;
+}
+.workright > img {
 }
