--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -6,15 +6,15 @@
   width: 100%;
   font-size: 20px;
   border-bottom: 2px solid gray;
+  backdrop-filter: blur(10px);
 }
 
 .nav {
   display: flex;
   max-width: 40rem;
   margin: auto;
-  padding: 1rem 0;
-  /* border-bottom: 2px solid gray; */
-  backdrop-filter: blur(10px);
+  padding: 0.5rem 1rem;
+  align-items: center;
 }
 .nav ul {
   display: flex;
