--- a/components/layout/Home.module.css
+++ b/components/layout/Home.module.css
@@ -1,21 +1,56 @@
-.homemain {
+.home {
+  display: flex;
+  flex-direction: column;
   max-width: 35rem;
   margin: auto;
 }
-.home {
+.home__header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
+  animation: fadeIn 1s;
 }
-.home > img {
+.home__header > img {
   border-radius: 50%;
 }
 
-.bigname {
-  font-size: 36px;
+.home__name {
+  flex-basis: 100%;
+  text-align: center;
 }
-.bio {
+.home__bio {
   max-width: 30rem;
-  padding: 2rem 0;
+  padding: 2rem;
   margin: auto;
+  text-align: center;
+  animation: fadeIn 1s;
+}
+.home__social {
+  display: flex;
+  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+.home__social path {
+  fill: white;
+}
+.home__social svg:hover {
+  fill: black;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@media screen and (min-width: 45rem) {
+  .home__header {
+    flex-direction: row;
+  }
+  .home__name {
+    text-align: left;
+  }
 }
