--- a/components/layout/Home.module.css
+++ b/components/layout/Home.module.css
@@ -1,7 +1,7 @@
 .home {
   display: flex;
   flex-direction: column;
-  max-width: 35rem;
+  max-width: 40rem;
   margin: auto;
 }
 .home__header {
@@ -11,7 +11,7 @@
   gap: 1rem;
   animation: fadeIn 1s;
 }
-.home__header > img {
+.home__header img {
   border-radius: 50%;
 }
 
@@ -31,6 +31,8 @@
   gap: 3rem;
   align-items: center;
   justify-content: center;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid gray;
 }
 .home__social path {
   fill: white;
