--- a/components/layout/Home.module.css
+++ b/components/layout/Home.module.css
@@ -10,10 +10,13 @@
   flex-direction: column;
   gap: 1rem;
   justify-content: space-between;
-  animation: fadeIn 1s;
 }
-.home__header img {
+.home__img {
+  position: relative;
+  max-height: 15rem;
+  width: 35%;
   border-radius: 50%;
+  overflow: hidden;
 }
 
 .home__name {
@@ -25,7 +28,6 @@
   padding: 2rem;
   margin: auto;
   text-align: center;
-  animation: fadeIn 1s;
 }
 .home__social {
   display: flex;
@@ -40,14 +42,6 @@
 }
 .home__social svg:hover {
   fill: black;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 @media screen and (min-width: 45rem) {
   .home__header {
