--- a/styles/work/Work.module.css
+++ b/styles/work/Work.module.css
@@ -1,38 +1,30 @@
 .work {
   display: flex;
   flex-wrap: wrap;
-  max-width: 45rem;
-  padding: 1rem 0rem;
   margin: auto;
   flex-direction: row;
   justify-content: center;
   gap: 1rem;
 }
 
-.work > .work__header {
+.work__header {
   font-size: 30px;
   text-align: center;
   flex-grow: -1;
   flex-basis: 100%;
 }
 
-.work > p {
+.work p {
   flex-basis: 50%;
   flex-grow: 1;
   order: 2;
   padding: 0 1rem;
 }
-.work > h1 {
+.work h1 {
   margin-bottom: 0;
 }
 
 .work__imgcontainer {
-  position: relative;
-  flex-grow: 1;
-  flex-basis: 100%;
-  height:auto;
-  width: 100%;
-  overflow: hidden;
 }
 
 .work > .work__learnmore {
