--- a/styles/home/Home.module.css
+++ b/styles/home/Home.module.css
@@ -13,7 +13,6 @@
 
 .home__img {
   display:inline-block;
-  width:300px;
   text-align: center;
 }
 
@@ -41,8 +40,9 @@
   gap: 3rem;
   align-items: center;
   justify-content: center;
-  padding-bottom: 1rem;
+  padding: 1rem 0 1rem;
   border-bottom: 2px solid gray;
+  border-top:2px solid gray;
 }
 .home__social path {
   fill: white;
@@ -57,6 +57,23 @@
 }
 .home__works>div:nth-child(odd) {
   background-color:#1e212a;
+}
+.home__footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 1rem;
+  border-top: 2px solid gray;
+}
+.home__footer p {
+  padding:0;
+  margin:0;
+}
+.home__contact {
+  display:flex;
+}
+.home__contact p {
+  flex-grow:2;
 }
 @media screen and (min-width: 45rem) {
   .home__header {
