--- a/styles/home/Home.module.css
+++ b/styles/home/Home.module.css
@@ -36,13 +36,14 @@
   text-align: center;
 }
 .home__social {
+  background:#1e212a;
   display: flex;
   gap: 3rem;
   align-items: center;
   justify-content: center;
   padding: 1rem 0 1rem;
-  border-bottom: 2px solid gray;
-  border-top:2px solid gray;
+  border-bottom: 2px solid var(--default-accent-color);
+  border-top:2px solid var(--default-accent-color);
 }
 .home__social path {
   fill: white;
@@ -55,7 +56,10 @@
   flex:1;
   flex-direction: column;
 }
-.home__works>div:nth-child(odd) {
+.home__works > div {
+  border-bottom:2px solid var(--default-accent-color);
+}
+.home__works > div:nth-child(even) {
   background-color:#1e212a;
 }
 .home__footer {
@@ -63,7 +67,6 @@
   flex-direction: column;
   align-items: center;
   padding-top: 1rem;
-  border-top: 2px solid gray;
 }
 .home__footer p {
   padding:0;
