--- a/styles/shared/MainNavigation.module.css
+++ b/styles/shared/MainNavigation.module.css
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   font-size: 20px;
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid var(--default-accent-color);
   backdrop-filter: blur(10px);
   z-index: 100;
 }
