--- a/styles/shared/Tag.module.css
+++ b/styles/shared/Tag.module.css
@@ -9,11 +9,11 @@
 }
 
 .tag {
-    opacity:0.7;
+    opacity:0.;
     background:#343434;
     display:inline;
     font-size: .8rem;
     padding: 0.3rem 1rem;
     border-radius: 5rem;
-    border:solid gray 2px;
+    border:solid var(--default-accent-color) 2px;
 }
