preparing for migration, need to commit and push

--- a/styles/work/WorkIndex.module.css
+++ b/styles/work/WorkIndex.module.css
@@ -1,7 +1,9 @@
-.main {
-}
 .container {
-  max-width: 35rem;
   margin: auto;
-  padding: 1rem;
+  text-align: center;
+}
+
+
+.works {
+  display:flex;
 }
