--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,11 @@ body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 body {
+  background:var(--default-background-color);
   color: white;
-  background-color: black;
 }
 
 a {
