cleaned up design, added projects and links to each project

--- a/styles/work/Work.module.css
+++ b/styles/work/Work.module.css
@@ -11,32 +11,26 @@
   text-align: center;
   flex-grow: -1;
   flex-basis: 100%;
+  padding: 1rem 0;
 }
 
 .work p {
   flex-basis: 50%;
   flex-grow: 1;
-  order: 2;
   padding: 0 1rem;
 }
 .work h1 {
-  margin:.3rem;
+  margin: 0.3rem;
 }
 
 .work__imgcontainer {
-  overflow:hidden;
-  margin:.5rem;
+  overflow: hidden;
+  margin: 0.5rem;
 }
 
 .work__imgcontainer img {
-  border-radius: .8rem;
-  scale:1;
-}
-.work > .work__learnmore {
-  order: 5;
-  text-align: center;
-  display: inline-block;
-  padding: 2rem;
+  border-radius: 0.8rem;
+  scale: 1;
 }
 .work__learnmore a {
   padding: 1rem;
@@ -56,7 +50,16 @@
 .work__text {
   text-align: center;
   font-style: italic;
-  color:lightgray;
+  color: lightgray;
+}
+.btn {
+  padding: 0.2em 0;
+  width: 100%;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 @media screen and (min-width: 45rem) {
   .workright {
